--- a/src/Assets/css/sidenav.css
+++ b/src/Assets/css/sidenav.css
@@ -68,10 +68,9 @@ nav.sidenav {
     vertical-align: bottom;
     line-height: 46px;
     transition: all 0.1s; }
-  nav.sidenav .fa-menutwo {
-    color: #383838;
-    font-size: 17px;
-    width: 32px;
-    vertical-align: bottom;
-    line-height: 46px;
+  nav.sidenav .fa-menu-arrow {
+    font-size: 8px;
+    line-height: 50px;
+    margin-right: 20px;
+    float: right;
     transition: all 0.1s; }
