--- a/src/Assets/css/layout.css
+++ b/src/Assets/css/layout.css
@@ -161,7 +161,7 @@ a.menu-active .fa-menu {
   text-transform: uppercase; }
 
 nav.sidenav {
-  width: 250px;
+  min-width: 250px;
   background-color: #1a1a1a;
   height: 100vh; }
   nav.sidenav a {
@@ -205,5 +205,10 @@ body {
 
 .MainLayout {
   display: flex; }
-  .MainLayout .container {
+  .MainLayout .content {
+    width: 100%; }
+    .MainLayout .content .breadcrumbContainer {
+      background-color: #262626;
+      height: 75px; }
+  .MainLayout .contentWrapper {
     border: 1px solid red; }
