--- a/src/Assets/css/sidenav.css
+++ b/src/Assets/css/sidenav.css
@@ -45,7 +45,7 @@ a.menu-active .fa-menu {
   text-transform: uppercase; }
 
 nav.sidenav {
-  width: 250px;
+  min-width: 250px;
   background-color: #1a1a1a;
   height: 100vh; }
   nav.sidenav a {
