--- a/src/Assets/css/sidenav.css
+++ b/src/Assets/css/sidenav.css
@@ -26,23 +26,27 @@
   width: 150px;
   height: 150px; }
 
-.menu-active {
-  box-shadow: inset 3px 0px 0px 0px #cb3e4b;
-  background: #232323;
-  color: white !important; }
-
-a.menu-active {
-  color: white !important; }
-
-a.menu-active .fa-menu {
-  color: white !important; }
-
-.small {
+h4 {
   font-size: 10px;
   height: 50px;
   line-height: 48px;
   padding: 0 23px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  margin: 0; }
+
+h3, h2, h1 {
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.1; }
+
+h2 {
+  font-size: 15px; }
+
+h1 {
+  font-size: 20px; }
 
 nav.sidenav {
   min-width: 250px;
@@ -74,3 +78,11 @@ nav.sidenav {
     margin-right: 20px;
     float: right;
     transition: all 0.1s; }
+  nav.sidenav .menu-active {
+    background: #232323;
+    box-shadow: inset 0px 1px 0px 0px #1a1a1a, inset 0px -1px 0px 0px #1a1a1a, inset 3px 0px 0px 0px #cb3e4b;
+    color: #ffffff !important; }
+  nav.sidenav a.menu-active {
+    color: #ffffff !important; }
+  nav.sidenav a.menu-active .fa-menu {
+    color: #ffffff !important; }
