--- a/src/Assets/scss/_default.scss
+++ b/src/Assets/scss/_default.scss
@@ -7,6 +7,7 @@
 
 $main-font: 'Roboto', sans-serif;
 $bold-font: 'Catamaran', sans-serif;
+$main-font-size: 13px;
 
 // Logo
 .logo {
@@ -17,21 +18,32 @@ $bold-font: 'Catamaran', sans-serif;
   height: 150px;
 }
 
-// Menu Active Element
-.menu-active {
-  box-shadow: inset 3px 0px 0px 0px $primary;
-  background: #232323;
-  color: white !important;
-}
-
-a.menu-active {color: white !important;}
-a.menu-active .fa-menu {color: white !important;}
-
 // Headings
-.small {
+
+h4 {
   font-size: 10px;
   height: 50px;
   line-height: 48px;
   padding: 0 23px;
   text-transform: uppercase;
+  margin: 0;
+}
+
+h3 {
+  font-size: $main-font-size;
+  margin: 0;
+  padding: 0;
+  color: $white;
+  font-weight: 500;
+  line-height: 1.1;
+}
+
+h2 {
+  @extend h3;
+  font-size: 15px;
+}
+
+h1 {
+  @extend h3;
+  font-size: 20px;
 }
