--- a/src/Assets/css/sidenav.css
+++ b/src/Assets/css/sidenav.css
@@ -19,6 +19,24 @@
   width: 100%;
   height: 2px; }
 
+body {
+  font-family: "Roboto", sans-serif;
+  color: #5c5c5c;
+  background-color: #212121;
+  font-size: 13px;
+  margin: 0; }
+  body a, body a:visited, body a:link, body a:active {
+    transition: all 0.1s;
+    text-decoration: none; }
+  body a:hover {
+    color: #a82f3b;
+    text-decoration: none;
+    transition: all 0.1s; }
+
+*, ::before, ::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 .logo {
   background-image: url("../img/logo.png");
   background-repeat: no-repeat;
@@ -47,6 +65,21 @@ h2 {
 
 h1 {
   font-size: 20px; }
+
+svg {
+  color: white; }
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #2d2d2d;
+  margin: 5px 0;
+  padding: 0; }
+
+.button {
+  background-color: #cb3e4b !important;
+  color: #ffffff !important; }
 
 nav.sidenav {
   min-width: 250px;
