--- a/src/Assets/scss/_default.scss
+++ b/src/Assets/scss/_default.scss
@@ -16,6 +16,10 @@ body {
   font-size: $main-font-size;
   margin: 0;
 
+  a {
+    color: $link;
+  }
+
   a, a:visited, a:link, a:active {
       transition: all 0.1s;
       text-decoration: none;
